force-app/main/default/objects/Mateco_Theme_Opp__c/Mateco_Theme_Opp__c.object-meta.xml
<CustomObject>
    <label>マテコ_テーマ/商談</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>マテコ_テーマ/商談名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>