force-app/main/default/objects/Mateco_Theme_Opp__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>マテコ_テーマ/商談</relationshipLabel>
    <relationshipName>AccountMatecoThemeOpp</relationshipName>
    <type>Lookup</type>
</CustomField>