force-app/main/default/objects/Mateco_Theme_Opp__c/fields/ExpectedforthistermRevenu__c.field-meta.xml
<CustomField>
    <fullName>ExpectedforthistermRevenu__c</fullName>
    <label>KPI指標金額（今期）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>