force-app/main/default/objects/Mateco_Theme_Opp__c/fields/MTALL__c.field-meta.xml
<CustomField>
    <fullName>MTALL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>全社</label>
    <type>Checkbox</type>
</CustomField>