force-app/main/default/objects/Mateco_Theme_Opp__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>マテコ_テーマ/商談</relationshipLabel>
    <relationshipName>OpportunityMateco_Theme_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>