force-app/main/default/objects/Mateco_Theme_Opp__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>テーマ_追及中</fullName>
                <color>#CC33CC</color>
                <label>テーマ_追及中</label>
            </value>
            <value>
                <fullName>テーマ_一部案件化</fullName>
                <color>#3366FF</color>
                <label>テーマ_一部案件化</label>
            </value>
            <value>
                <fullName>案件化</fullName>
                <color>#00CCCC</color>
                <label>案件化</label>
            </value>
            <value>
                <fullName>見積提出</fullName>
                <color>#33CC00</color>
                <label>見積提出</label>
            </value>
            <value>
                <fullName>受注.</fullName>
                <color>#FF6600</color>
                <label>受注.</label>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>マテコ計画</fullName>
            </value>
            <value>
                <fullName>テーマ_完了</fullName>
            </value>
            <value>
                <fullName>テーマ_保留</fullName>
            </value>
            <value>
                <fullName>検討保留</fullName>
                <color>#333333</color>
                <label>検討保留</label>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
            <value>
                <fullName>撤退</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>