force-app/main/default/objects/Mateco_Theme_Opp__c/fields/phaseNm__c.field-meta.xml
<CustomField>
    <fullName>phaseNm__c</fullName>
    <formula>CASE(
   TEXT(Phase__c),
   &quot;受注.&quot;, &quot;01_商談_受注&quot;,
   &quot;見積提出&quot;, &quot;02_商談_見積提出&quot;,
   &quot;案件化&quot;, &quot;03_商談_案件化&quot;,
   &quot;テーマ_一部案件化&quot;, &quot;04_テーマ_一部案件化&quot;,
   &quot;テーマ_追及中&quot;, &quot;05_テーマ_追求中&quot;,
    &quot;06_その他&quot;
)</formula>
    <label>phase</label>
    <type>Text</type>
</CustomField>