force-app/main/default/objects/Mateco_Theme_Opp__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>テーマ</label>
    <referenceTo>Theme__c</referenceTo>
    <relationshipLabel>マテコ_テーマ/商談</relationshipLabel>
    <relationshipName>ThemeMateco_Theme_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>